Fix bright flicker on page load in dark mode
The page initially renders in light mode before the JS gets a chance to
change it.

Use media queries to set the background colour correctly.

It's not perfect (the text'll be the wrong colour briefly), but it
avoids the annoying flash of white background when initially loading.

--- a/css/theme.css
+++ b/css/theme.css
@@ -8,6 +8,18 @@ body {
     font-size: 1.05rem;
 }
 
+@media (prefers-color-scheme: light) {
+    body {
+        background-color: rgb(255, 255, 255);
+    }
+}
+
+@media (prefers-color-scheme: dark) {
+    body {
+        background-color: rgb(33, 37, 41);
+    }
+}
+
 .blog-navbar {
     background-color: var(--main-color);
 }
